# BondFi

./: Dockerfile  README.md  backend_test.py  design_guidelines.json  package-lock.json  package.json
backend/: .env  server.py
contracts/bond-token/: Cargo.toml
contracts/bond-token/src/: lib.rs
contracts/bond_token/: Cargo.toml
contracts/bond_token/src/: lib.rs
frontend/: .env  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/Bond/scroll-animation/: package-lock.json  package.json
frontend/Bond/scroll-animation/src/app/: globals.css  layout.tsx  page.tsx
frontend/Bond/scroll-animation/src/components/: BondScroll.tsx  LoadingScreen.tsx  Overlay.tsx
frontend/src/: App.css  App.jsx  index.css
frontend/src/components/: BondScroll.jsx  Layout.jsx  LoadingScreen.jsx  Overlay.jsx  ProtectedRoute.jsx  Sidebar.jsx
frontend/src/components/magicui/: animated-list.jsx  bento-grid.jsx  border-beam.jsx  dot-pattern.jsx  marquee.jsx  number-ticker.jsx  retro-grid.jsx  shiny-button.jsx
frontend/src/context/: WalletContext.jsx
frontend/src/pages/: DashboardPage.jsx  EducationPage.jsx  IntroLandingPage.jsx  LandingPage.js  LandingPage.jsx  LoginPage.js  LoginPage.jsx  MarketplacePage.js  MarketplacePage.jsx  RegisterPage.js  RegisterPage.jsx  WalletPage.js  WalletPage.jsx
frontend/src/utils/: api.js  auth.js  mockBackend.js  soroban.js
test_reports/: backend_api_results.json  iteration_1.json
